# promviz

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: cli.rs  logging.rs  main.rs
src/interactive/: app.rs  mod.rs
src/interactive/ui/: graph_data.rs  histogram_data.rs  history.rs  mod.rs
src/prom/: metric_scraper.rs  mod.rs  model.rs  parser.rs  test_data.rs
