[package]
name = "promviz"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
ratatui = "0.27.0"
#ratatui = { path = "/tmp/ratatui" }
crossterm = "0.27"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1"
clap = { version = "4", features = ["cargo", "env", "wrap_help"] }
log = "0.4"
log4rs = "1.3"
regex = "1.10"
tui-tree-widget = "0.21"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
